# EhArchive

./: .gitignore  Cargo.toml  README.md  flake.nix  tampermonkey.user.js
.github/workflows/: release.yaml
src/: main.rs
src/api/: calibre.rs  download.rs  import.rs  mod.rs  tag_query.rs  tasks.rs
src/api/utils/: calibre.rs  mod.rs
src/config/: mod.rs
src/g_log/: mod.rs
src/tag_db/: db.rs  mod.rs  models.rs  schema.rs
