[package]
name = "eh-archive"
version = "0.1.4"
edition = "2024"

[dependencies]
libeh = { git = "https://github.com/AyaseFile/EhRust" }
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = "1.44"
clap = { version = "4.5", features = ["derive", "env"] }
diesel = { version = "2.2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel-dynamic-schema = "0.2"
chrono = "0.4"
uuid = { version = "1.16", features = ["v4"] }
regex = "1.11"
once_cell = "1.21"
libcalibre = { git = "https://github.com/AyaseFile/libcalibre" }
zip = "2.4"
log = "0.4"
env_logger = "0.11"
